--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -1,8 +1,55 @@
-﻿@model RwaApartmaniDataLayer.Models.Apartment
-
+﻿@using RwaApartments_Public.Models.ViewModels
+@model RwaApartmaniDataLayer.Models.Apartment
 @{
     ViewBag.Title = Model.NameEng;
+    StarsViewModel starViewModel = new StarsViewModel
+    {
+        Stars = Model.Stars,
+        TotalReviews = Model.TotalReviews
+    };
 }
 
-<h2>@Model.NameEng</h2>
-
+<div>
+    <div class="row">
+        <div class="col-sm">
+            <div class="container" style="height:50vh; width:80%;">
+                <div id="carouselExampleControls" class="carousel slide rounded-3" data-ride="carousel">
+                    <div class="carousel-inner" style=" width:100%; height: 600px !important;">
+                        @foreach (var picture in Model.Pictures)
+                        {
+                            if (picture.Equals(Model.RepresentativePicture))
+                            {
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="@picture.Base64Content" alt="apartment picture">
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="@picture.Base64Content" alt="apartment picture">
+                                </div>
+                            }
+                        }
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" onclick="$('#carouselExampleControls').carousel('prev')">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" onclick="$('#carouselExampleControls').carousel('next')">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-3">
+        <hr />
+        <div class="col-sm">
+            <h2>@Model.NameEng</h2>
+        </div>
+        <div class="col-md-auto">
+            @Html.Partial("_StarsView", model: starViewModel)
+        </div>
+    </div>
+</div>
