--- a/RwaApartments-Public/Views/Shared/_StarsView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_StarsView.cshtml
@@ -14,6 +14,6 @@
         <img class="icon" src="~/Content/images/star_empty.png"/>
     }
     <div>
-        <span class="text-white" style="position:relative; top:-.2em">(@Model.TotalReviews)</span>
+        <span class="light_gray_text" style="position:relative; top:-.2em">(@Model.TotalReviews)</span>
     </div>
 </div>
