--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -9,47 +9,49 @@
     };
 }
 
-<div>
-    <div class="row">
-        <div class="col-sm">
-            <div class="container" style="height:50vh; width:80%;">
-                <div id="carouselExampleControls" class="carousel slide rounded-3" data-ride="carousel">
-                    <div class="carousel-inner" style=" width:100%; height: 600px !important;">
-                        @foreach (var picture in Model.Pictures)
-                        {
-                            if (picture.Equals(Model.RepresentativePicture))
+<div class="rounded-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="container">
+                    <div id="carouselExampleControls" class="carousel slide rounded-3" data-ride="carousel">
+                        <div class="carousel-inner" style=" width:100%; height: 800px !important;">
+                            @foreach (var picture in Model.Pictures)
                             {
-                                <div class="carousel-item active">
-                                    <img class="d-block w-100" src="@picture.Base64Content" alt="apartment picture">
-                                </div>
+                                if (picture.Equals(Model.RepresentativePicture))
+                                {
+                                    <div class="carousel-item active">
+                                        <img class="d-block w-100 h-100" src="@picture.Base64Content" alt="apartment picture">
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100 h-100" src="@picture.Base64Content" alt="apartment picture">
+                                    </div>
+                                }
                             }
-                            else
-                            {
-                                <div class="carousel-item">
-                                    <img class="d-block w-100" src="@picture.Base64Content" alt="apartment picture">
-                                </div>
-                            }
-                        }
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" onclick="$('#carouselExampleControls').carousel('prev')">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" onclick="$('#carouselExampleControls').carousel('next')">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" onclick="$('#carouselExampleControls').carousel('prev')">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" onclick="$('#carouselExampleControls').carousel('next')">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row mt-3">
-        <hr />
-        <div class="col-sm">
-            <h2>@Model.NameEng</h2>
-        </div>
-        <div class="col-md-auto">
-            @Html.Partial("_StarsView", model: starViewModel)
+        <div class="row mt-3">
+            <hr />
+            <div class="col-sm">
+                <h2>@Model.NameEng</h2>
+            </div>
+            <div class="col-md-auto">
+                @Html.Partial("_StarsView", model: starViewModel)
+            </div>
         </div>
     </div>
 </div>
