--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -53,5 +53,10 @@
                 @Html.Partial("_StarsView", model: starViewModel)
             </div>
         </div>
+        <div class="row mt-3">
+            <div class="col-sm">
+
+            </div>
+        </div>
     </div>
 </div>
