Added contact form, tags, fiexed carousel autoscroll, adjusted carousel size at ApartmentView

--- a/RwaApartments-Public/Content/custom-styling.css
+++ b/RwaApartments-Public/Content/custom-styling.css
@@ -18,6 +18,11 @@ a{
     margin-right: .5em;
 }
 
+.user_icon{
+    width: 3em;
+    height: 3em
+}
+
 .darkblue {
     background-color: rgb(4, 28, 50);
 }
