--- a/RwaApartments-Public/Views/Shared/_ReviewView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_ReviewView.cshtml
@@ -1,12 +1,31 @@
-﻿@model RwaApartmaniDataLayer.Models.ApartmentReview
+﻿@using RwaApartments_Public.Models.ViewModels
+@model RwaApartmaniDataLayer.Models.ApartmentReview
+@{
+    StarsViewModel starsViewModel = new StarsViewModel
+    {
+        Stars = Model.Stars,
+    };
+}
 <div class="container">
     <hr />
     <div class="row">
         <div class="col-md-auto">
-            <img src="~/Content/images/user_account.png" />
+            <img src="~/Content/images/user_account.png" class="user_icon" />
         </div>
         <div class="col-sm">
-            
+            <div class="row h-50">
+                <div class="col-md-auto">
+                    <h5 style="width:fit-content">@Model.User.UserName</h5>
+                </div>
+                <div class="col-md-auto">
+                    <div class="mb-3">
+                        @Html.Partial("_StarsView", model: starsViewModel)
+                    </div>
+                </div>
+            </div>
+            <div class="row h-50">
+                <p>@Model.Details</p>
+            </div>
         </div>
     </div>
 </div>
