--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -5,7 +5,14 @@
     StarsViewModel starViewModel = new StarsViewModel
     {
         Stars = Model.Stars,
-        TotalReviews = Model.TotalReviews
+        TotalReviews = Model.TotalReviews,
+        ShowTotalReviews = false
+    };
+    ContactReservationViewModel contactViewModel = new ContactReservationViewModel
+    {
+        User = null,
+        StartTime = DateTime.Now,
+        EndTime = DateTime.Now
     };
 }
 
@@ -13,39 +20,36 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
-                <div class="container">
-                    <div id="carouselExampleControls" class="carousel slide rounded-3" data-ride="carousel">
-                        <div class="carousel-inner" style=" width:100%; height: 800px !important;">
-                            @foreach (var picture in Model.Pictures)
+                <div id="carouselExampleControls" class="carousel slide rounded-3" data-ride="carousel">
+                    <div class="carousel-inner" style=" width:100%; height: 800px !important;">
+                        @foreach (var picture in Model.Pictures)
+                        {
+                            if (picture.Equals(Model.RepresentativePicture))
                             {
-                                if (picture.Equals(Model.RepresentativePicture))
-                                {
-                                    <div class="carousel-item active">
-                                        <img class="d-block w-100 h-100" src="@picture.Base64Content" alt="apartment picture">
-                                    </div>
-                                }
-                                else
-                                {
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100 h-100" src="@picture.Base64Content" alt="apartment picture">
-                                    </div>
-                                }
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100 h-100" src="@picture.Base64Content" alt="apartment picture">
+                                </div>
                             }
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" onclick="$('#carouselExampleControls').carousel('prev')">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" onclick="$('#carouselExampleControls').carousel('next')">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+                            else
+                            {
+                                <div class="carousel-item">
+                                    <img class="d-block w-100 h-100" src="@picture.Base64Content" alt="apartment picture">
+                                </div>
+                            }
+                        }
                     </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" onclick="$('#carouselExampleControls').carousel('prev')">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" onclick="$('#carouselExampleControls').carousel('next')">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </div>
         <div class="row mt-3">
-            <hr />
             <div class="col-sm">
                 <h2>@Model.NameEng</h2>
             </div>
@@ -53,10 +57,35 @@
                 @Html.Partial("_StarsView", model: starViewModel)
             </div>
         </div>
+        <div class="row">
+            <div style="display:flex; flex-wrap:wrap; gap:.5em">
+                @foreach (var tag in Model.Tags)
+                {
+                    @Html.Partial("_TagView", tag.NameEng)
+                }
+            </div>
+        </div>
         <div class="row mt-3">
             <div class="col-sm">
-
+                @Html.Partial("_ContactReservation", model: contactViewModel)
             </div>
+        </div>
+        <div class="row mt-3">
+            @foreach (var review in Model.Reviews)
+            {
+                @Html.Partial("_ReviewView", model: review)
+            }
         </div>
     </div>
 </div>
+
+@section Scripts{
+    <script>
+        $('.carousel-control-prev').click(function (e) {
+            e.preventDefault();
+        });
+        $('.carousel-control-next').click(function (e) {
+            e.preventDefault();
+        });
+    </script>
+}
