--- a/RwaApartments-Public/Views/Shared/_StarsView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_StarsView.cshtml
@@ -1,19 +1,22 @@
 ﻿@using RwaApartments_Public.Models.ViewModels
 @model StarsViewModel
-@{ 
+@{
     int fullStarCount = Model.Stars;
     int emptyStarCount = 5 - fullStarCount;
 }
 <div style="width:fit-content; display:flex; ">
     @for (int i = 1; i <= fullStarCount; i++)
     {
-        <img class="icon" src="~/Content/images/star.png"/>
+        <img class="icon" src="~/Content/images/star.png" />
     }
     @for (int i = 1; i <= emptyStarCount; i++)
     {
-        <img class="icon" src="~/Content/images/star_empty.png"/>
+        <img class="icon" src="~/Content/images/star_empty.png" />
     }
-    <div>
-        <span class="light_gray_text" style="position:relative; top:-.2em">(@Model.TotalReviews)</span>
-    </div>
+    @if (Model.ShowTotalReviews)
+    {
+        <div>
+            <span class="text-white" style="position:relative; top:-.2em">(@Model.TotalReviews)</span>
+        </div>
+    }
 </div>
