--- a/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
+++ b/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
@@ -43,7 +43,7 @@
                 @Html.DropDownList(optionLabel: null, selectList: ddlFiltersSource, name: "FilterCode", htmlAttributes: new { @class = "form-control", id = "filterDropDownList" })
             </div>
             <div class="col-md-auto">
-                <button type="button" class="btn btn-warning" id="findButton">
+                <button type="button" class="btn btn-danger" id="findButton">
                     <img src="~/Content/images/search.png" style="position: relative; top: -2px; left:3px" class="icon" />
                 </button>
             </div>
