--- a/RwaApartments-Public/Views/Shared/_ApartmentInListView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_ApartmentInListView.cshtml
@@ -11,7 +11,7 @@
 
 
 <a href="Apartments/ViewApartment/?id=@Model.Id">
-    <div class="container rounded-3 darkblue">
+    <div class="container rounded-3 text-black" style="background-color:rgb(245,245,245)">
         <div class="row mb-3">
             <div class="col-4">
                 <div class="container p-3">
@@ -21,12 +21,12 @@
             <div class="col-8">
                 <div class="row h-50 clearfix mb-3">
                     <div class="col-sm">
-                        <h2 class="pt-3 white_text" style="height:fit-content">@Model.NameEng</h2>
+                        <h2 class="pt-3 text-black" style="height:fit-content">@Model.NameEng</h2>
                         <div class="mb-3">
-                            <span style="height:fit-content" class="text-white"><img src="~/Content/images/location.png" style="margin-right:.5em" />@Model.CityName</span>
+                            <span style="height:fit-content"><img src="~/Content/images/location_red.png" style="margin-right:.5em" class="icon" />@Model.CityName</span>
                         </div>
                         <div>
-                            <span style="height:fit-content" class="text-white">@Model.Address</span>
+                            <span style="height:fit-content">@Model.Address</span>
                         </div>
                     </div>
                     <div class="col-md-auto">
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="row h-50">
-                    <div style="display: flex; flex-direction: row; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; gap: 1em ">
+                    <div style="display: flex; flex-direction: row; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; gap: .7em ">
                         @foreach (var tag in Model.Tags)
                         {
                             @Html.Partial("_TagView", model: tag.NameEng)
@@ -45,10 +45,10 @@
                     <div style="width:100%; display:flex; justify-content:space-between; height:fit-content">
                         <div style="display:flex;gap:2em;flex-direction:row">
                             <div>
-                                <span style="height:fit-content" class="text-white"><img src="~/Content/images/bed.png" style="position: relative; top: -2px;" class="icon" />@Model.TotalSpaces.ToString()</span>
+                                <span style="height:fit-content"><img src="~/Content/images/bed.png" style="position: relative; top: -2px;" class="icon" />@Model.TotalSpaces.ToString()</span>
                             </div>
                             <div>
-                                <span style="height:fit-content" class="text-white"><img src="~/Content/images/sea.png" style="position: relative; top: -2px;" class="icon" />@Model.BeachDistance.ToString()m </span>
+                                <span style="height:fit-content"><img src="~/Content/images/sea.png" style="position: relative; top: -2px;" class="icon" />@Model.BeachDistance.ToString()m </span>
                             </div>
                         </div>
                         <div style="display:flex; flex-direction:row; gap:1em">
