--- a/RwaApartments-Public/Views/Shared/_Layout.cshtml
+++ b/RwaApartments-Public/Views/Shared/_Layout.cshtml
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg darkblue">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <img src="~/Content/images/apartment.png" alt="logo" style="height: 2rem; width: 2rem; margin-right:.5rem" />
-                @Html.ActionLink("RWA Apartments", "Apartments", "BrowseApartments", null, new { @class = "navbar-brand white_link" });
+                @Html.ActionLink("RWA Apartments", "Apartments", "BrowseApartments", null, new { @class = "navbar-brand white_link" })
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="">
                 <span class="navbar-toggler-icon">
