--- a/RwaApartments-Public/Views/Shared/_StarsView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_StarsView.cshtml
@@ -16,7 +16,7 @@
     @if (Model.ShowTotalReviews)
     {
         <div>
-            <span class="text-white" style="position:relative; top:-.2em">(@Model.TotalReviews)</span>
+            <span class="text-black" style="position:relative; top:-.2em">(@Model.TotalReviews)</span>
         </div>
     }
 </div>
