--- a/RwaApartments-Public/Views/Shared/_Layout.cshtml
+++ b/RwaApartments-Public/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <img src="~/Content/images/apartment.png" alt="logo" style="height: 2rem; width: 2rem; margin-right:.5rem" />
