Submiting Review with ajax now works!!!! Kinda yes it does hehe

--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -14,6 +14,7 @@
         StartTime = DateTime.Now,
         EndTime = DateTime.Now
     };
+    var reviews = Model.Reviews.Reverse();
 }
 
 <div class="rounded-3">
@@ -116,9 +117,9 @@
             </div>
         </div>
         <div class="row mt-3">
-            <form id="createReviewForm" method="post">
-            <input type="hidden" name="Stars" , value="0" />
-            <input type="hidden" name="UserId" , value="1" />
+            <form id="createReviewForm">
+            <input type="hidden" name="Stars", id="Stars" value="0" />
+            <input type="hidden" name="UserId" , value="2" />
             <input type="hidden" name="ApartmentId" , value="@Model.Id" />
             <div class="tag_container_light rounded-3 mb-3 p-3">
                 <div class="row">
@@ -143,7 +144,7 @@
                                     <textarea rows="3" cols="1" name="Details" class="form-control" placeholder="Place your review here..."></textarea>
                                 </div>
                                 <div class="col-md-auto">
-                                    <input type="submit" id="createReview" class="btn btn-outline-warning" value="Add review" style="height:100%" />
+                                    <input type="submit" id="createReview" class="btn btn-outline-danger" value="Submit" style="height:100%" />
                                 </div>
                             </div>
                         </div>
@@ -189,7 +190,7 @@
             }*@
         </div>
         <div class="row mt-3">
-            @foreach (var review in Model.Reviews)
+            @foreach (var review in reviews)
             {
                 @Html.Partial("_ReviewView", model: review)
             }
@@ -200,19 +201,13 @@
 @section Scripts{
     <script>
         $('#createReview').click(function (e) {
-            /*var valData = $("#createReviewForm").serialize();*/
-            var formdata = {
-                stars: $("#Stars").val(),
-                userId: $("#UserId").val(),
-                apartmentId: $("#ApartmentId").val(),
-                details: $("#Details").val(),
-            }
-            console.log(formdata);
+            var valData = $("#createReviewForm").serialize();
             $.ajax({
                 type: "POST",
-                url: `Apartments/SubmitApartmentReview`,
+                url: `/Apartments/SubmitApartmentReview`,
                 dataType: "json",
-                data: formdata
+                contentType: 'application/x-www-form-urlencoded; charset=UTF-8', 
+                data: valData
             }).done(function () {
                 alert("Review submitted")
             });
@@ -233,7 +228,7 @@
             for (var i = 1; i <= id; i++) {
                 $(`img#${i}`).attr('src', '/Content/images/star.png');
             }
-            $('#Stars').val(id);
+            $("#Stars").val(id);
         });
 
     </script>
