--- a/RwaApartments-Public/Views/Shared/_ApartmentInListView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_ApartmentInListView.cshtml
@@ -10,7 +10,7 @@
 }
 
 
-<a href="Apartments/ViewApartment/?id=@Model.Id">
+<a href="Apartments/ViewApartment/@Model.Id">
     <div class="container rounded-3 text-black" style="background-color:rgb(245,245,245)">
         <div class="row mb-3">
             <div class="col-4">
