--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -189,17 +189,22 @@
                 </div>
             }*@
         </div>
-        <div class="row mt-3">
-            @foreach (var review in reviews)
+        <div class="row mt-3 reviews_container">
+            @*@foreach (var review in reviews)
             {
                 @Html.Partial("_ReviewView", model: review)
-            }
+            }*@
         </div>
     </div>
 </div>
 
 @section Scripts{
     <script>
+
+        $(document).ready(function () {
+            loadReviewListAjax();
+        });
+
         $('#createReview').click(function (e) {
             var valData = $("#createReviewForm").serialize();
             $.ajax({
@@ -209,9 +214,15 @@
                 contentType: 'application/x-www-form-urlencoded; charset=UTF-8', 
                 data: valData
             }).done(function () {
-                alert("Review submitted")
+                alert("Review submitted");
             });
         });
+
+        $("#createReviewForm").submit(function (e) {
+            loadReviewListAjax();
+            location.reload();
+            e.preventDefault();
+        })
 
         $('.carousel-control-prev').click(function (e) {
             e.preventDefault();
@@ -230,6 +241,16 @@
             }
             $("#Stars").val(id);
         });
+
+        function loadReviewListAjax() {
+            $.ajax({
+                url: `/Apartments/LoadApartmentListView/?apartmentId=@Model.Id`,
+                success: function (partialView) {
+                    $(".reviews_container").html("")
+                    $(".reviews_container").append(partialView);
+                }
+            });
+        }
 
     </script>
 }
