Done for today :(

--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -213,8 +213,7 @@
                 dataType: "json",
                 contentType: 'application/x-www-form-urlencoded; charset=UTF-8', 
                 data: valData
-            }).done(function () {
-                alert("Review submitted");
+            }).success(function () {
             });
         });
 
