Login and registration now partially works

--- a/RwaApartments-Public/Views/Apartments/Index.cshtml
+++ b/RwaApartments-Public/Views/Apartments/Index.cshtml
@@ -20,11 +20,11 @@
             @Html.PasswordFor(m => m.Password)
             @Html.ValidationMessageFor(m => m.Password)
         </div>
-        <div class="mb-3 form-check">
+        @*<div class="mb-3 form-check">
             @Html.LabelFor(m => m.Password)
             @Html.PasswordFor(m => m.Password)
             @Html.ValidationMessageFor(m => m.Password)
-        </div>
+        </div>*@
         <button type="submit" class="btn btn-danger">Submit</button>
     }
 </div>
